base.html created (ome commit before)

--- a/pdfworks_web/website/templates/website/homepage.html
+++ b/pdfworks_web/website/templates/website/homepage.html
@@ -3,5 +3,5 @@
 {% block title %}pdfWorks - Images and PDF converter{% endblock %}
 
 {% block content %}
-<p>This is the homepage</p>
+<h1>Comming soon...</h1>
 {% endblock %}
