--- a/pdfworks_web/website/templates/website/homepage.html
+++ b/pdfworks_web/website/templates/website/homepage.html
@@ -3,5 +3,5 @@
 {% block title %}pdfWorks - Images and PDF converter{% endblock %}
 
 {% block content %}
-<h1>Comming soon...</h1>
+<h1>Coming soon...</h1>
 {% endblock %}
