created different templates, url routes, working on dropzone

--- a/pdfworks_web/website/templates/website/base.html
+++ b/pdfworks_web/website/templates/website/base.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>
-	{% block title %}pdfWorks - Images and PDF converter{% endblock %}
+		{% block title %}pdfWorks - Images and PDF converter{% endblock %}
 	</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,8 +17,28 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 	        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
 	        crossorigin="anonymous"></script>
+	<script src="{% static '/js/dropzone.min.js' %}"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
+		<a class="navbar-brand" href="{% url 'website:merge' %}">pdfWorks</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+		        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link{% if section == 'merge' %} active{% endif %}"
+				   href="{% url 'website:merge' %}">IMG to PDF</a>
+				<a class="nav-item nav-link{% if section == 'split' %} active{% endif %}"
+				   href="{% url 'website:split' %}">Split PDF</a>
+				<a class="nav-item nav-link{% if section == 'offline' %} active{% endif %}"
+				   href="{% url 'website:offline' %}">Offline version</a>
+			</div>
+		</div>
+	</div>
+</nav>
 <div class="container">
 	{% block content %}
 	{% endblock %}
