--- a/pdfworks_web/website/templates/website/base.html
+++ b/pdfworks_web/website/templates/website/base.html
@@ -17,12 +17,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 	        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
 	        crossorigin="anonymous"></script>
-	<script src="{% static '/js/dropzone.min.js' %}"></script>
+	<link rel="stylesheet" href="{% static '/css/dropzone.css' %}">
+	<script src="{% static '/js/dropzone.js' %}"></script>
+	<script src="{% static '/js/dropzone_options.js' %}"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-		<a class="navbar-brand" href="{% url 'website:merge' %}">pdfWorks</a>
+		<a class="navbar-brand" href="{% url 'website:homepage' %}">pdfWorks</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
 		        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
