--- a/pdfworks_web/website/templates/website/merge.html
+++ b/pdfworks_web/website/templates/website/merge.html
@@ -3,5 +3,13 @@
 {% block title %}pdfWorks - Images and PDF converter{% endblock %}
 
 {% block content %}
-<h1>Coming soon...</h1>
+<h3>Merge images and PDF files to a single PDF file.</h3>
+
+<div class="dropzone"></div>
+
+<script>$(".dropzone").dropzone({
+	width: 800,
+  text: 'Drop files you want to merge here or click to select.'
+})</script>
+
 {% endblock %}
