--- a/pdfworks_web/website/templates/website/merge.html
+++ b/pdfworks_web/website/templates/website/merge.html
@@ -7,7 +7,7 @@
 <h3>Merge images and PDF files to a single PDF file.</h3>
 <p>This tool can easily convert your images to PDF files and merge them with other PDF files.
 	Just drop them in the field below.</p>
-<form action="/{{ section }}/" class="dropzone" method="post" id="merge-dropzone">
+<form action="{% url 'website:merge' %}" class="dropzone" method="post" id="merge-dropzone">
 	{% csrf_token %}
 </form>
 <div class="row p-3">
