--- a/pdfworks_web/website/templates/website/base.html
+++ b/pdfworks_web/website/templates/website/base.html
@@ -1,10 +1,11 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>
-		{% block title %}pdfWorks - Images and PDF converter{% endblock %}
+		{% block title %}pdfWorks - {% trans "Images and PDF converter" %}{% endblock %}
 	</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -46,9 +47,9 @@
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 				<a class="nav-item nav-link{% if section == 'merge' %} active{% endif %}"
-				   href="{% url 'website:merge' %}">IMG or/and PDF to PDF</a>
+				   href="{% url 'website:merge' %}">{% trans "IMG or/and PDF to PDF" %}</a>
 				<a class="nav-item nav-link{% if section == 'split' %} active{% endif %}"
-				   href="{% url 'website:split' %}">Split PDF</a>
+				   href="{% url 'website:split' %}">{% trans "Split PDF" %}</a>
 			</div>
 		</div>
 	</div>
